--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':screenplay', ':triad', ':conductor', ':conductor_mosby', ':scoop'
+include ':screenplay', ':triad', ':conductor', ':conductor_mosby', ':scoop', ':pancakes'
